syntax = "proto3";

option go_package = "github.com/pursuit/portal/pkg/proto";

package proto;

message CreateUserPayload {
  string name = 1;
  bytes password = 2;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserBalancePayload {
  int64 user_id = 1;
}

message GetUserBalanceResponse {
  int64 amount = 1;
}

service User {
  rpc Create(CreateUserPayload) returns (CreateUserResponse) {}
  rpc GetBalance(GetUserBalancePayload) returns (GetUserBalanceResponse) {}
}
